--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: build-artifact
-                path: /dist
+                path: dist
